[metadata]
name = bindings.rust.fnv
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/pybindings/bindings.rust.fnv
description = Python bindings to the fnv Rust crate
long-description = file: README.rst
version = 1.0.6-r.1
license = MIT
license-file = COPYING
classifiers =
	Programming Language :: Rust
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules
	Operating System :: OS Independent

[options]
zip_safe = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
test_suite = tests
setup_requires =
	setuptools
	setuptools-rust ~=0.9

[options.extras_require]
dev =
	setuptools
	setuptools-rust
	docutils
	Pygments

[build_rust]
release = true

[tomlgen_rust]
force = true

[tomlgen_rust.dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
fnv = "1.0.6"
byteorder = "^1"
regex = "^0.2"

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[aliases]
bdist_wheel = build_rust --qbuild bdist_wheel
build_ext = tomlgen_rust build_ext
build = tomlgen_rust build
install = tomlgen_rust install
test = tomlgen_rust build_rust test
