[package]
name = "bindings.rust.fnv"
version = "1.0.6-bind.1"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "bindings_rust_fnv"
path = "fnv.rs"

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
fnv = "1.0.6"
byteorder = "^1"
regex = "^0.2"
